# crypto-pvp

./: .dockerignore  .env.example  .gitignore  APP_OVERVIEW.md  CORS.md  README.md  docker-compose.yml  package-lock.json  package.json  pnpm-workspace.yaml
apps/api/: Dockerfile  package.json  tsconfig.json
apps/api/prisma/: schema.prisma
apps/api/src/: config.ts  index.ts  redis.ts  seed.ts
apps/api/src/routes/: auth.ts  challenges.ts  health.ts  markets.ts  resolution.ts  users.ts
apps/api/src/services/: challenges.ts  kalshi.ts  solana.ts  users.ts
apps/api/src/worker/: jobs.ts  worker.ts
apps/web/: Dockerfile  next.config.js  package.json  tsconfig.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/admin/resolve/: page.tsx
apps/web/src/app/challenges/: page.tsx
apps/web/src/app/challenges/[id]/: page.tsx
apps/web/src/app/dashboard/: page.tsx
apps/web/src/app/login/: page.tsx
apps/web/src/app/markets/: page.tsx
apps/web/src/app/settings/: page.tsx
apps/web/src/components/: RequireAuth.tsx  WalletConnect.tsx  WalletContext.tsx
apps/web/src/lib/: api.ts  siws.ts  solana.ts
docs/: AGENT_HANDOFF.md  HISTORY.md  TODO.md
programs/escrow/: Anchor.toml  Cargo.toml  package.json
programs/escrow/src/: lib.rs
programs/escrow/tests/: escrow.ts
scripts/: anchor-local.sh
webtest/: index.html
