[package]
name = "escrow"
version = "0.1.0"
description = "Kalshi PvP escrow Anchor program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = []
default = []

[dependencies]
anchor-lang = "0.29.0"
